--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MyMealApp</string>
     <string name="app_title">My Meal App</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_favorite">Favorite</string>
 </resources>
