--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">MyMealApp</string>
-    <string name="app_title">My Meal App</string>
+    <string name="app_name">MyMealsApp</string>
+    <string name="app_title">My Meals App</string>
     <string name="menu_home">Home</string>
     <string name="menu_favorite">Favorite</string>
 </resources>
