--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_title">My Meals App</string>
     <string name="menu_home">Home</string>
     <string name="menu_favorite">Favorite</string>
+    <string name="loading">Loading</string>
 </resources>
