--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="loading">Loading</string>
     <string name="loading_failed">Failed to load</string>
     <string name="meals_photo">Meals photo</string>
+    <string name="navigation_back">Back</string>
 </resources>
